# Security_Dashboard

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: sample_findings.json
security_dashboard/: __init__.py  aws_security_hub.py  cli.py  config.py  dashboard.py  github.py  models.py
tests/: test_cli.py  test_dashboard.py
